--- a/index.html
+++ b/index.html
@@ -1,17 +1,18 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="ru">
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <link rel="stylesheet" href="style.css">
+  <link rel="stylesheet" href="main.css">
   <title>Document</title>
 </head>
 <body>
+  <div class="theme-switcher"></div>
   <form>
-    <h1>Войти</h1>
-    <input type="text" placeholder="Логин">
-    <input type="password" placeholder="Пароль">
-    <button>Войти</button>
+    <h1>Login</h1>
+    <input type="text" placeholder="Name">
+    <input type="password" placeholder="Password">
+    <button>Login</button>
   </form>
 </body>
 </html>
