--- a/index.html
+++ b/index.html
@@ -8,11 +8,13 @@
 </head>
 <body>
   <div class="theme-switcher"></div>
-  <form>
-    <h1>Login</h1>
-    <input type="text" placeholder="Name">
-    <input type="password" placeholder="Password">
-    <button>Login</button>
-  </form>
+  <div class="body">
+    <form>
+      <h1>Login</h1>
+      <input type="text" placeholder="Name">
+      <input type="password" placeholder="Password">
+      <button>Login</button>
+    </form>
+  </div>
 </body>
 </html>
