--- a/index.html
+++ b/index.html
@@ -3,18 +3,19 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <link rel="stylesheet" href="style.css">
-  <title>Document</title>
+  <title>Любимой женщине</title>
+  <link rel="stylesheet" href="main.css">
+  <link rel="icon" href="https://static.kulturologia.ru/files/u18046/heart-symbol-01.jpg">
 </head>
 <body>
-  <div class="theme-switcher"></div>
-  <div class="body">
-    <form>
-      <h1>Login</h1>
-      <input type="text" placeholder="Name">
-      <input type="password" placeholder="Password">
-      <button>Login</button>
-    </form>
+  <div class="wrapper">
+    <h1>Оксан, с днем рождения!</h1>
+    <p>Как ты заметила, тут все фиолетовое!</p>
+    <div class="card">
+      <span>А вот твои котики! --></span>
+      <img src="img/котики.jpg" width="50%" alt="Если ты это увидела, то у тебя не прогрузилась картинка, печально..((">
+    </div>
+    <a class="link" href="page2.html">Нажми на кнопочку чтобы получить подарок!</a>
   </div>
 </body>
 </html>
