--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Любимой женщине</title>
-  <link rel="stylesheet" href="main.css">
+  <link rel="stylesheet" href="style.css">
   <link rel="icon" href="https://static.kulturologia.ru/files/u18046/heart-symbol-01.jpg">
 </head>
 <body>
