--- a/page2.html
+++ b/page2.html
@@ -8,7 +8,7 @@
 </head>
 <body>
   <div class="wrapper">
-    <h1 class="h12">Шучу, котиков и не должно было быть..</h1>
+    <h1 class="h12">Я хочу еще разок сказать тебе пару слов</h1>
     <p>Оксан, я так нормально тебя и не поздравил.
     Я очень счастлив что мы с тобой общаемся и поддерживаем друг-друга.
   Мы пережили куча моментов..Помню как видел как ты улыбалась принося мне столько позитива, сколько и не снилось. Помню как мы играи в манкрафт, в овервотч, сидели по 5 часов и разговаривали ни о чем.
