--- a/page2.html
+++ b/page2.html
@@ -14,6 +14,6 @@
   Мы пережили куча моментов..Помню как видел как ты улыбалась принося мне столько позитива, сколько и не снилось. Помню как мы играи в манкрафт, в овервотч, сидели по 5 часов и разговаривали ни о чем.
 Столько прекрасного еще предстоит нам пережить и надеюсь мы поборим вместе все наши загоны и депрессии. Я посто хочу сказать тебе, что ты для меня как родная и я переживаю за тебя как за родную, когда у тебя что-то случается. Люблю тебя, Оксан, оставайся с лучшими своими качествами и все обязательно наладится. С днем рождением, солнце мое!<span class="hearts">❤❤❤❤❤❤❤❤❤❤❤❤❤❤❤❤❤❤❤❤❤❤❤❤❤</span></p>
   </div>
-  <img width="50%" src="img/котики.jpg" alt="">
+  <img width="50%" src="https://www.rosemarkt.ru/resources/data/photos/576be9ecb19c8/big.jpg" alt="">
 </body>
 </html>
