--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
       <span>А вот твои котики! --></span>
       <img src="img/котики.jpg" width="50%" alt="Если ты это увидела, то у тебя не прогрузилась картинка, печально..((">
     </div>
-    <a class="link" href="page2.html">Нажми на кнопочку чтобы получить подарок!</a>
+    <a class="link" href="page2.html">Нажми на кнопочку!</a>
   </div>
 </body>
 </html>
