--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 <div class="card">
   <div class="bg"></div>
   <div class="box">
-    <input type="radio" id="purple" class="active" name="bg-switcher">
+    <input type="radio" id="purple" class="active" name="bg-switcher" checked>
     <label for="purple" id="label-purple"></label>
     <input type="radio" id="blue" name="bg-switcher">
     <label for="blue" id="label-blue"></label>
